# soundpull

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  cleanup.yml  docker-publish.yml
app/: auth.py  config.py  db.py  duplicates.py  exports.py  fix_music_tags.py  genres.py  health.py  i18n.py  jobs.py  library_index.py  library_ops.py  lyrics.py  main.py  matching.py  models.py  notifications.py  pipeline.py  playlist_import.py  scheduler.py  search.py  security.py  sources.py  theme.py  webdav_util.py
app/pages/: _shared.py  discover.py  duplicates.py  health.py  history.py  import_.py  index.py  library.py  settings.py  subscriptions.py
docs/roadmap/: CONVENTIONS.md  README.md
docs/roadmap/01-webdav-file-ops/: implementation.md  spec.md
docs/roadmap/02-multi-source/: implementation.md  spec.md
docs/roadmap/03-library-browser/: implementation.md  spec.md
docs/roadmap/04-duplicate-finder/: implementation.md  spec.md
docs/roadmap/05-library-health/: implementation.md  spec.md
docs/roadmap/06-soundcloud/: implementation.md  spec.md
docs/roadmap/07-in-app-search/: implementation.md  spec.md
docs/roadmap/08-artist-watch/: implementation.md  spec.md
docs/roadmap/09-tagging-rules/: implementation.md  spec.md
docs/roadmap/10-stats-dashboard/: implementation.md  spec.md
docs/roadmap/11-bandcamp/: implementation.md  spec.md
docs/roadmap/12-batch-import/: implementation.md  spec.md
docs/roadmap/13-playlist-import/: implementation.md  spec.md
docs/roadmap/14-track-selection/: implementation.md  spec.md
docs/roadmap/15-job-queue-control/: implementation.md  spec.md
docs/roadmap/16-replaygain/: implementation.md  spec.md
docs/roadmap/17-library-export/: implementation.md  spec.md
docs/roadmap/18-pwa-share-target/: implementation.md  spec.md
docs/roadmap/19-navidrome-integration/: implementation.md  spec.md
docs/roadmap/20-rest-api/: implementation.md  spec.md
docs/roadmap/21-cookie-monitor/: implementation.md  spec.md
docs/roadmap/22-storage-monitor/: implementation.md  spec.md
tests/: test_auth.py  test_bandcamp.py  test_config.py  test_db_migrate.py  test_duplicates.py  test_exports.py  test_fix_music_tags.py  test_genres.py  test_health.py  test_history.py  test_i18n.py  test_jobs.py  test_library_index.py  test_library_ops.py  test_library_page.py  test_lyrics.py  test_matching.py  test_notifications.py  test_pipeline.py  test_playlist_import.py  test_scheduler.py  test_search.py  test_soundcloud.py  test_sources.py  test_webdav_util.py
