[project]
name = "soundpull"
version = "0.7.0"
description = "Soundpull — multi-user web app to download YouTube Music as Navidrome-tagged MP3s"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
    # Pinned exactly for metadata parity: a floating yt-dlp can silently change
    # extraction/tagging and break the byte-identical tag output the pipeline
    # guarantees. Bumps come as reviewed Dependabot PRs, each re-verified against
    # real tag output (guarded by the postprocessor-chain snapshot in
    # tests/test_pipeline.py). See issue #37.
    "yt-dlp==2026.6.9",
    "mutagen>=1.47",
    "webdav4>=0.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
