[project]
name = "soundpull"
version = "0.8.9"
description = "Soundpull — multi-user web app to download YouTube Music as Navidrome-tagged MP3s"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "itsdangerous>=2.1",
    "sqlmodel>=0.0.21",
    "pydantic-settings>=2.2",
    "cryptography>=42.0",
    # Pinned exactly for metadata parity: a floating yt-dlp can silently change
    # extraction/tagging and break the byte-identical tag output the pipeline
    # guarantees. Bumps come as reviewed Dependabot PRs, each re-verified against
    # real tag output (guarded by the postprocessor-chain snapshot in
    # tests/test_pipeline.py). See issue #37.
    # The [default] extra pulls the matching yt-dlp-ejs (its version MUST track
    # yt-dlp's), needed to solve YouTube's JS signature/n challenges. That needs
    # a JS runtime too — the Docker image ships a Deno binary (see Dockerfile).
    # Parity is unaffected: yt-dlp itself stays pinned, only companion deps change.
    "yt-dlp[default]==2026.6.9",
    # PO-token plugin: yt-dlp auto-discovers it via the yt_dlp_plugins namespace.
    # It fetches GVS PO tokens (YouTube 403 fix) from a bgutil-ytdlp-pot-provider
    # server (docker-compose sidecar). Pin to match the provider image tag; the
    # plugin only makes HTTP calls, so no JS runtime is needed in THIS image.
    "bgutil-ytdlp-pot-provider==1.3.1",
    "mutagen>=1.47",
    "webdav4>=0.10",
]

[project.optional-dependencies]
test = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
